# C_Exam_42

./: CMakeLists.txt  main11.c
Level_1/: first_word.c  ft_strcpy.c  ft_swap.c  rev_print.c  search_and_replace.c
Level_2/: a.out  alpha_mirror.c  ft_strrev.c  inter.c
Level_3/: a.out  add_prime_sum.c  expand_str.c  ft_list.h  ft_list_size.c  ft_rrange.c  hidenp.c  paramsum.c  str_capitalizer.c
Level_4/: brainfuck.c  fprime.c  ft_itoa.c  ft_itoa_base.c  ft_list.h  ft_list_foreach.c  ft_split.c  list.h  rev_wstr.c  rostring.c  sort_int_tab.c  sort_list.c
level_0/: aff_a.c  aff_first_param.c  aff_last_param.c
level_1/: ft_strcpy.c  repeat_alpha.c  rev_print.c  rot_13.c  rotone.c  search_and_replace.c  ulstr.c
level_2/: do_op.c  do_op.h  ft_atoi.c
level_3/: epur_str.c  ft_range.c  str_capitalizer.c  tab_mult.c
level_4/: ft_list.h  ft_list_remove_if.c  rostring.c
